<resources>
    <string name="app_name">Netclan Explorer Trail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Select">Available | Hey Let Us Connect</string>
    <string name="SelectYourAvailability">Select Your Availability</string>
    <string name="AddStatus">Add Your Status</string>
    <string name="SelectHyperLocal">Select Hyper local Distance</string>
    <string name="Hii">Hi community! I am open to new connections</string>
    <string name="SelectPurposes">Select Purpose</string>
    <string name="Coffee">Coffee</string>
    <string name="Business">Business</string>
    <string name="Hobbies">Hobbies</string>
    <string name="Friendship">Friendship</string>
    <string name="Movies">Movies</string>
    <string name="Dinning">Dinning</string>
    <string name="Dating">Dating</string>
    <string name="Matrimony">Matrimony</string>
    <string name="SaveExplore">Save &amp; Explore</string>

</resources>